--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/espiral.png" />
+    <link rel="icon" href="/espiral.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Descubre el poder del marketing digital con [Nombre de la Marca]. Nuestra experiencia en estrategias en línea te ayudará a impulsar tu negocio. Aumenta la visibilidad, atrae clientes y alcanza tus metas. Únete a nosotros y transforma tu presencia en línea hoy."
+      content="Descubre el poder del marketing digital con Origen. Nuestra experiencia en estrategias en línea te ayudará a impulsar tu negocio. Aumenta la visibilidad, atrae clientes y alcanza tus metas. Únete a nosotros y transforma tu presencia en línea hoy."
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <title>Origen MP</title>
   </head>
   <body>
